# grid_trading_bot

./: .env.production.template  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DEPLOYMENT.md  Dockerfile  LICENSE.txt  README.md  backtest_output.txt  check_prices.py  deploy-minimal.sh  deploy.sh  docker-compose.minimal.yml  docker-compose.production.yml  docker-compose.yml  environment.yml  main.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: run-tests-on-push-or-merge-pr-master.yml
config/: config.json  config1.json  config2.json  config3.json  config_dynamic.json  config_live.json  config_manager.py  config_validator.py  exceptions.py  risk_management_mode.py  trading_mode.py
core/bot_management/: event_bus.py  grid_trading_bot.py  health_check.py
core/bot_management/bot_controller/: bot_controller.py  exceptions.py
core/bot_management/notification/: notification_content.py  notification_handler.py
core/grid_management/: grid_level.py  grid_manager.py
core/order_handling/: balance_tracker.py  exceptions.py  fee_calculator.py  order.py  order_book.py  order_manager.py  order_status_tracker.py
core/order_handling/execution_strategy/: backtest_order_execution_strategy.py  live_order_execution_strategy.py  order_execution_strategy_factory.py  order_execution_strategy_interface.py
core/services/: backtest_exchange_service.py  exceptions.py  exchange_interface.py  exchange_service_factory.py  live_exchange_service.py
core/validation/: exceptions.py  order_validator.py
monitoring/configs/grafana/provisioning/: dashboards.yml  datasources.yml
monitoring/configs/loki/: loki.yaml  rules.yaml
monitoring/configs/promtail/: promtail.yaml
monitoring/dashboards/: grid_trading_bot_dashboard.json
strategies/: grid_trading_strategy.py  order_sizing_type.py  plotter.py  range_mode.py  spacing_type.py  strategy_type.py  trading_performance_analyzer.py  trading_strategy_interface.py
tests/: conftest.py
tests/bot_management/: test_bot_controller.py  test_event_bus.py  test_grid_trading_bot.py  test_health_check.py  test_notification_handler.py
tests/config/: test_config_manager.py  test_config_validator.py
tests/grid_management/: test_grid_level.py  test_grid_manager.py
tests/order_handling/: test_backtest_order_execution_strategy.py  test_balance_tracker.py  test_fee_calculator.py  test_live_order_execution_strategy.py  test_order.py  test_order_book.py  test_order_execution_strategy_factory.py  test_order_manager.py  test_order_status_tracker.py
tests/services/: test_backtest_exchange_service.py  test_exchange_service_factory.py  test_live_exchange_service.py
tests/strategies/: test_grid_trading_strategy.py  test_plotter.py  test_trading_performance_analyzer.py
tests/utils/: test_arg_parser.py  test_config_name_generator.py  test_logging_config.py  test_performance_results_saver.py
tests/validation/: test_order_validator.py
utils/: arg_parser.py  config_name_generator.py  constants.py  logging_config.py  performance_results_saver.py
